# OstEngine

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  OstEngine.cfg  OstEngine.sln
Game/: CMakeLists.txt  Game.cpp  Game.h  Game.vcxproj
Game/Include/: GameInstance.h  Game_GameModule.h
Game/Src/: GameInstance.cpp  Game_GameModule.cpp
OstEngine/Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  Main.cpp
OstEngine/Engine/Application/: CoreEngine.cpp  CoreEngine.h
OstEngine/Engine/Application/Modules/: ModuleHandle.h  ModuleLibrary.cpp  ModuleLibrary.h  ModuleLoader.cpp  ModuleLoader.h
OstEngine/Engine/Include/OstEngine/: BasicTypes.h  EngineInterface.h
OstEngine/Engine/Include/OstEngine/Application/: Application.h
OstEngine/Engine/Include/OstEngine/Application/CommandLine/: CommandLineArgs.h  CommandLineParser.h
OstEngine/Engine/Include/OstEngine/Application/Config/: CmdArgs.h  CommandLineParser.h  ConfigFileParser.h  ConfigValues.h  Configurations.h  NamedConfigValue.h
OstEngine/Engine/Include/OstEngine/Application/Window/: Window.h
OstEngine/Engine/Include/OstEngine/Configuration/: AppCmdArgs.h  CmdArg.h
OstEngine/Engine/Include/OstEngine/Core/Input/: InputHandler.h
OstEngine/Engine/Include/OstEngine/Debug/: Logging.h
OstEngine/Engine/Include/OstEngine/Debug/Logging/: ILogger.h  LogLevel.h  LogMessage.h  LoggingContext.h  LoggingSubcontext.h
OstEngine/Engine/Include/OstEngine/Game/: GameInstance.h  GameModule.h  GameModuleInstance.h  GameModuleInternal.h  OstEngineGameCore.h
OstEngine/Engine/Include/OstEngine/Game/Core/: NameComponent.cpp  NameComponent.h  TransformComponent.h
OstEngine/Engine/Include/OstEngine/Game/ObjectSystem/: GameObject.h  ObjectSystem.h  StableIndexedType.h
OstEngine/Engine/Include/OstEngine/Math/: CommonMath.h  MathCore.h  MathOperations.h  MathUtils.h  Matrices.h  Quaternion.h  Transform.h  Vectors.h
OstEngine/Engine/Include/OstEngine/Math/Matrices/: Mat3x3.h  Mat4x4.h
OstEngine/Engine/Include/OstEngine/Math/Structures/: Mat3x3.h  Mat4x4.h  Matrices.h  Quaternion.h  Vector3.h  Vector4.h  Vectors.h
OstEngine/Engine/Include/OstEngine/Math/Units/: Degrees.h  Radians.h
OstEngine/Engine/Include/OstEngine/Math/Vectors/: Vector2.h  Vector3.h  Vector4.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/: Component.h  GameObject.h  ISceneContent.h  ObjectSystem.h  Scene.h  StableIndexedType.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/Component/: Component.h  ComponentHandle.h  ComponentsCore.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/Internal/: ComponentContainer.h  ComponentRegistry.h  StableIndexedTypeContainer.h  StableIndexedTypeContainerBase.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/ManagedType/: ManagedObjectPtr.h  ManagedObjectType.h  ManagedTypeContainer.h  ManagedTypeContainerBase.h  StableIdxLookup.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/Objects/: GameObject.h  GameObjectHandle.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/Reflection/: ReflectedTypeUtility.h
OstEngine/Engine/Include/OstEngine/ObjectSystem/Registration/: ComponentTypeRegistration.h  (+1 more)
OstEngine/Engine/Include/OstEngine/Rendering/: IRenderTarget.h
OstEngine/Engine/Include/OstEngine/Subsystem/: IAssetsSystem.h  IInputSystem.h
OstEngine/Engine/Include/OstEngine/Utility/: EnumFlag.h  PathUtils.h  StringHashing.h
OstEngine/Engine/Service/: ServiceProvider.cpp  ServiceProvider.h
OstEngine/Engine/Src/: Engine.cpp  Engine.h  EngineCmdArgs.h  EngineComponentRegistration.cpp  EngineComponentRegistration.h  EngineInterface.cpp
OstEngine/Engine/Src/Application/: AppRuntimeStatics.h  Application.cpp
OstEngine/Engine/Src/Application/CommandLine/: CommandLineParser.cpp
OstEngine/Engine/Src/Application/Config/: CmdArgs.cpp  CommandLineParser.cpp  ConfigFile.cpp  ConfigFile.h  ConfigFileParser.cpp  Configurations.cpp  EngineConfiguration.h
OstEngine/Engine/Src/Application/Window/: AppWindow.cpp  AppWindow.h  Window.cpp
OstEngine/Engine/Src/Configuration/: AppCmdArgs.cpp
OstEngine/Engine/Src/Core/Input/: InputSystem.cpp  InputSystem.h
OstEngine/Engine/Src/Debug/Logging/: LogMessage.cpp  LoggerIOStream.h  LoggingContext.cpp
OstEngine/Engine/Src/Game/: GameModuleInternal.cpp  GameModuleInternal.h
OstEngine/Engine/Src/Game/ObjectSystem/: ObjectSystem.cpp
OstEngine/Engine/Src/Math/: CommonMath.cpp  MathOperations.cpp  Transform.cpp
OstEngine/Engine/Src/Math/Units/: Degrees.cpp  Radians.cpp
OstEngine/Engine/Src/ObjectSystem/: Component.cpp  ComponentTypeRegistry.cpp  GameObject.cpp  ObjectSystem.cpp  ObjectSystem.h  Scene.cpp  StableIdxLookup.cpp
OstEngine/Engine/Src/ObjectSystem/Component/: Component.cpp  ComponentHandle.cpp
OstEngine/Engine/Src/ObjectSystem/Internal/: ComponentRegistry.cpp  StableIndexedTypeContainerBase.cpp
OstEngine/Engine/Src/ObjectSystem/Objects/: GameObject.cpp  GameObjectHandle.cpp
OstEngine/Engine/Src/Rendering/: RenderingContext.cpp  RenderingContext.h  TextureRenderTarget.cpp  TextureRenderTarget.h
OstEngine/Engine/Src/Subsystem/Assets/: AssetsSystem.cpp  AssetsSystem.h
OstEngine/Engine/Src/Subsystem/Input/: InputEventProvider.cpp  InputEventProvider.h  InputSystem.cpp  InputSystem.h
OstEngine/Engine/Src/Utility/: PathUtils.cpp
OstEngine/Logger/: CMakeLists.txt
OstEngine/Logger/Include/OstLog/: APIDefinition.h  CoreAPI.h  ILogger.h  LogLevel.h  LogMessage.h  Logger.h  LoggerApi.h  LoggerLifetimeManagement.h  LoggingInstance.h  MessageFormatter.h  OstLogger.h
OstEngine/Logger/Include/OstLog/Internal/: MessageQueue.h
OstEngine/Logger/Include/OstLog/Logging/: ILogger.h  LogMessage.h  LogScope.h  LoggerApi.h  LoggingInstance.h
OstEngine/Logger/Include/OstLog/Sinks/: ConsoleLogSink.h  FileLogSink.h  LogSink.h
OstEngine/Logger/Src/: LogScope.cpp  LogSink.cpp  Logger.cpp  Logger.h  LoggingInstance.cpp  MessageFormatter.cpp
OstEngine/Logger/Src/Internal/: MessageQueue.cpp  MessageQueue.h
OstEngine/Logger/Src/Sinks/: ConsoleLogSink.cpp  FileLogSink.cpp
OstEngine/Player/: CMakeLists.txt
OstEngine/Player/Src/: Main.cpp
(+249 files in other folders)
